tests/ui/array-slice-vec/slice-to-vec-comparison.stderr
error[E0308]: mismatched types
  --> $DIR/slice-to-vec-comparison.rs:4:9
   |
LL |     a > b;
   |         ^ expected `&[_; 0]`, found `&Vec<u8>`
   |
   = note: expected reference `&[_; 0]`
              found reference `&Vec<u8>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
