tests/ui/array-slice-vec/slice-to-vec-comparison.rs
fn main() {
    let a = &[];
    let b: &Vec<u8> = &vec![];
    a > b;
    //~^ ERROR mismatched types
}
